Enabling sort by code